cnfj/out.txt
   Compiling cnfj v0.1.16 (/Users/z/i18n/rust/cnfj)
warning: unused import: `MatchKind`
  --> cnfj/src/lib.rs:10:49
   |
10 | use daachorse::{CharwiseDoubleArrayAhoCorasick, MatchKind};
   |                                                 ^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `static_init::dynamic`
  --> cnfj/src/lib.rs:11:5
   |
11 | use static_init::dynamic;
   |     ^^^^^^^^^^^^^^^^^^^^

warning: function `replace_with_dict` is never used
  --> cnfj/src/lib.rs:34:4
   |
34 | fn replace_with_dict(
   |    ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: `cnfj` (lib) generated 3 warnings (3 duplicates)
warning: `cnfj` (lib test) generated 3 warnings (run `cargo fix --lib -p cnfj --tests` to apply 2 suggestions)
error[E0432]: unresolved imports `cnfj::f2j`, `cnfj::j2f`
  --> cnfj/tests/main.rs:1:11
   |
 1 | use cnfj::{f2j, j2f};
   |           ^^^  ^^^ no `j2f` in the root
   |           |
   |           no `f2j` in the root
   |           help: a similar name exists in the module: `fj`
   |
note: found an item that was configured out
  --> /Users/z/i18n/rust/cnfj/src/lib.rs:5:9
   |
 4 | #[cfg(feature = "f2j")]
   |       --------------- the item is gated behind the `f2j` feature
 5 | pub mod f2j;
   |         ^^^
note: found an item that was configured out
  --> /Users/z/i18n/rust/cnfj/src/lib.rs:51:8
   |
50 | #[cfg(feature = "f2j")]
   |       --------------- the item is gated behind the `f2j` feature
51 | pub fn f2j(text: impl AsRef<str>) -> String {
   |        ^^^
note: found an item that was configured out
  --> /Users/z/i18n/rust/cnfj/src/lib.rs:56:8
   |
55 | #[cfg(feature = "j2f")]
   |       --------------- the item is gated behind the `j2f` feature
56 | pub fn j2f(text: impl AsRef<str>) -> String {
   |        ^^^

For more information about this error, try `rustc --explain E0432`.
error: could not compile `cnfj` (test "main") due to 1 previous error
